--- a/about.html
+++ b/about.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - AIET Coaching Center</title>
+    <!-- Updated title with location and keyword targeting -->
+    <title>About AIET Coaching Center in Jajpur, Odisha | Computer Training Institute</title>
+    <!-- Updated meta description with keywords -->
+    <meta name="description" content="Learn about AIET Coaching Center in Jajpur, Odisha. Best computer institute providing affordable PGDCA, Python, Web Development and AI courses for rural students with placement support." />
+    <!-- Added comprehensive keywords for about page -->
+    <meta name="keywords" content="AIET Jajpur, computer institute Jajpur, coaching center Odisha, AI education, computer training rural, PGDCA training Jajpur" />
+    <link rel="canonical" href="https://aiet-classes.vercel.app/about.html" />
+    <meta property="og:title" content="About AIET Coaching Center in Jajpur, Odisha" />
+    <meta property="og:description" content="AIET provides practical computer & AI courses for rural students in Jajpur. Learn more about our mission, instructors and placement support." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://aiet-classes.vercel.app/about.html" />
+    
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <!-- Font Awesome for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Analytics GA4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -25,6 +43,9 @@
                 </button>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#courses">Courses</a></li>
+                    <li><a href="about.html" class="nav-link active">About</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -33,8 +54,9 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>About AIET</h1>
-            <p>Our mission and vision for education</p>
+            <!-- Updated H1 with location keyword -->
+            <h1>About AIET Coaching Center in Jajpur</h1>
+            <p>Best Computer Institute in Odisha - Our mission and vision for education</p>
         </div>
     </section>
 
@@ -44,13 +66,13 @@
             <div class="mission-vision-grid">
                 <div class="mission-card">
                     <h2>Our Mission</h2>
-                    <p>Bringing AI & Computer Education to Rural Students</p>
-                    <p>We believe that quality tech education should be accessible to everyone, regardless of their location or financial background. Our mission is to empower rural students with practical, industry-relevant skills in AI, automation, and computer science.</p>
+                    <p>Bringing AI & Computer Education to Rural Students in Jajpur, Odisha</p>
+                    <p>We believe that quality tech education should be accessible to everyone, regardless of their location or financial background. Our mission is to empower rural students in Jajpur and surrounding areas with practical, industry-relevant skills in AI, automation, and computer science through affordable PGDCA and specialized courses.</p>
                 </div>
                 <div class="vision-card">
                     <h2>Our Vision</h2>
                     <p>Affordable, Modern, Project-Based Training for Everyone</p>
-                    <p>We envision a future where every student has access to world-class tech education. Through affordable courses, hands-on projects, and mentorship, we're building a community of skilled professionals ready to make an impact in the digital world.</p>
+                    <p>We envision a future where every student in rural Odisha has access to world-class tech education. Through affordable computer courses, hands-on projects, and mentorship, we're building a community of skilled professionals ready to make an impact in the digital world.</p>
                 </div>
             </div>
         </div>
@@ -59,23 +81,23 @@
     <!-- Why We're Different -->
     <section class="why-different">
         <div class="container">
-            <h2 class="section-title">Why We're Different</h2>
+            <h2 class="section-title">Why AIET is the Best Computer Institute in Jajpur</h2>
             <div class="difference-grid">
                 <div class="difference-item">
                     <h3>🎯 AI-Focused Curriculum</h3>
-                    <p>First to bring AI and automation-focused learning in this area. Our courses are designed to prepare students for the future of work.</p>
+                    <p>First to bring AI and automation-focused learning in Jajpur. Our computer courses are designed to prepare students for the future of work with practical AI applications.</p>
                 </div>
                 <div class="difference-item">
                     <h3>💼 Industry Partnerships</h3>
-                    <p>We work with leading companies to ensure our curriculum stays current and our students get real internship opportunities.</p>
+                    <p>We work with leading companies to ensure our curriculum stays current and our students get real internship opportunities after completing PGDCA and other courses.</p>
                 </div>
                 <div class="difference-item">
                     <h3>👥 Personalized Learning</h3>
-                    <p>Small batch sizes and personalized attention ensure every student gets the support they need to succeed.</p>
+                    <p>Small batch sizes and personalized attention ensure every student gets the support they need to succeed in our computer training programs.</p>
                 </div>
                 <div class="difference-item">
                     <h3>🚀 Career Support</h3>
-                    <p>From resume building to interview preparation, we support our students throughout their career journey.</p>
+                    <p>From resume building to interview preparation, we support our students throughout their career journey after completing our courses in Jajpur.</p>
                 </div>
             </div>
         </div>
@@ -86,9 +108,9 @@
         <div class="container">
             <h2 class="section-title">Our Story</h2>
             <div class="story-content">
-                <p>AIET Coaching Center was founded with a simple belief: technology education should be accessible to everyone. Our founder, recognizing the gap in quality tech education in rural areas, started AIET to bridge that divide.</p>
-                <p>What began as a small initiative has grown into a thriving community of learners, mentors, and professionals. Today, we're proud to have trained hundreds of students who are now working in tech companies, pursuing higher education, or starting their own ventures.</p>
-                <p>We remain committed to our core values: affordability, quality, and accessibility. Every course we design, every student we mentor, and every partnership we build is guided by our mission to democratize tech education.</p>
+                <p>AIET Coaching Center was founded with a simple belief: technology education should be accessible to everyone. Our founder, recognizing the gap in quality computer training and PGDCA courses in rural areas like Jajpur, started AIET to bridge that divide.</p>
+                <p>What began as a small initiative has grown into a thriving community of learners, mentors, and professionals. Today, we're proud to have trained hundreds of students in Jajpur and Odisha who are now working in tech companies, pursuing higher education, or starting their own ventures.</p>
+                <p>We remain committed to our core values: affordability, quality, and accessibility. Every computer course we design, every student we mentor, and every partnership we build is guided by our mission to democratize tech education in rural Odisha.</p>
             </div>
         </div>
     </section>
@@ -99,16 +121,15 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>AIET Coaching Center</h4>
-                    <p>Bringing AI & Computer Education to Rural Students</p>
-                    <!-- Added social media links with Font Awesome icons -->
+                    <p>Best Computer Institute in Jajpur, Odisha - Bringing AI & Computer Education to Rural Students</p>
                     <div class="social-links">
-                        <a href="https://www.youtube.com/your-channel" target="_blank" rel="noopener noreferrer" title="YouTube" class="social-icon">
+                        <a href="https://www.youtube.com/@aietclasses" target="_blank" rel="noopener noreferrer" title="YouTube" class="social-icon">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="https://www.instagram.com/your-profile" target="_blank" rel="noopener noreferrer" title="Instagram" class="social-icon">
+                        <a href="https://www.instagram.com/aietclasses/" target="_blank" rel="noopener noreferrer" title="Instagram" class="social-icon">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.linkedin.com/company/your-company" target="_blank" rel="noopener noreferrer" title="LinkedIn" class="social-icon">
+                        <a href="https://www.linkedin.com/in/aiet-classes/" target="_blank" rel="noopener noreferrer" title="LinkedIn" class="social-icon">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -126,13 +147,39 @@
                     <h4>Contact Info</h4>
                     <p>📧 biswalanil2004@gmail.com</p>
                     <p>📞 +91 89173 32516</p>
+                    <p>📍 Nandipur Chaka, Jajpur, Odisha</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 AIET Coaching Center. All rights reserved.</p>
+                <p>&copy; 2025 AIET Coaching Center - Best Computer Institute in Jajpur, Odisha. All rights reserved.</p>
             </div>
         </div>
     </footer>
+
+    <!-- JSON-LD structured data for Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "AIET Coaching Center",
+      "url": "https://aiet-classes.vercel.app",
+      "logo": "https://aiet-classes.vercel.app/logo.png",
+      "description": "AIET Coaching Center provides affordable PGDCA, Python, Web Development, and Digital Marketing courses for rural students in Jajpur, Odisha.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Nandipur Chaka",
+        "addressLocality": "Jajpur",
+        "addressRegion": "Odisha",
+        "postalCode": "755006",
+        "addressCountry": "IN"
+      },
+      "sameAs": [
+        "https://www.youtube.com/@aietclasses",
+        "https://www.instagram.com/aietclasses/",
+        "https://www.linkedin.com/in/aiet-classes/"
+      ]
+    }
+    </script>
 
     <script src="script.js"></script>
 </body>
