--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AIET Coaching Center - Learn AI & Computer Skills</title>
+    <!-- Updated title with primary keywords: PGDCA, Jajpur, Odisha -->
+    <title>PGDCA Courses in Jajpur, Odisha | AI & Web Development Training | AIET</title>
+    <!-- Updated meta description with primary keywords and location targeting -->
+    <meta name="description" content="AIET Coaching Center offers affordable PGDCA courses in Jajpur, Odisha. Learn Python, Web Development, AI courses, and Digital Marketing. Best computer institute in Jajpur with government certificate PGDCA training." />
+    <!-- Added comprehensive keyword list targeting Jajpur and Odisha -->
+    <meta name="keywords" content="PGDCA in Jajpur, PGDCA in Odisha, computer courses in Jajpur, computer institute Jajpur, AI course Jajpur, web development course Jajpur, python course in Jajpur Odisha, affordable computer courses in Jajpur, PGDCA government certificate Jajpur, best computer institute near me Jajpur, digital marketing course Jajpur, MS Office course near Nandipur Chaka" />
+    <meta name="author" content="AIET Coaching Center" />
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <link rel="canonical" href="https://aiet-classes.vercel.app/" />
+    <meta property="og:title" content="PGDCA Courses in Jajpur, Odisha | AI & Web Development Training | AIET" />
+    <meta property="og:description" content="Affordable PGDCA, Python, Web Development and Digital Marketing courses for rural students in Jajpur, Odisha." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://aiet-classes.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PGDCA Courses in Jajpur, Odisha | AIET Coaching Center" />
+    <meta name="twitter:description" content="Learn AI, Python, Web Development & Digital Marketing in Jajpur, Odisha" />
+    
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <!-- Font Awesome for social icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <!-- Google Analytics GA4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
   </head>
   <body>
     <!-- Navigation -->
@@ -29,7 +52,6 @@
             <span></span>
             <span></span>
           </button>
-          <!-- Updated navigation links to use anchor links for single-page navigation -->
           <ul class="nav-menu" id="navMenu">
             <li><a href="#home" class="nav-link active">Home</a></li>
             <li><a href="#courses" class="nav-link">Courses</a></li>
@@ -45,11 +67,13 @@
       <div class="container">
         <div class="hero-wrapper">
           <div class="hero-content">
-            <h2 class="hero-title">AIET Coaching Center</h2>
-            <p class="hero-subtitle">Learn Computers, AI & Career Skills</p>
+            <!-- Updated H1 with primary keyword PGDCA in Jajpur -->
+            <h1 class="hero-title">PGDCA Courses in Jajpur, Odisha</h1>
+            <!-- Updated subtitle with keyword-rich content -->
+            <p class="hero-subtitle">Best Computer Institute for AI & Web Development Training</p>
+            <!-- Updated description with location and keyword integration -->
             <p class="hero-description">
-              Affordable, practical, and future-ready training for rural
-              students.
+              Affordable PGDCA government certificate courses and computer training in Jajpur. Learn Python, Web Development, AI, and Digital Marketing with hands-on projects and placement support.
             </p>
             <a
               href="https://forms.gle/fJpDUfpvXd3wdbja6"
@@ -62,7 +86,7 @@
             <div class="hero-image-container">
               <img
                 src="/placeholder.svg?height=400&width=400"
-                alt="AIET Coaching Center"
+                alt="AIET Coaching Center - Computer training and AI courses in Jajpur, Odisha"
                 class="hero-image"
               />
               <div class="hero-image-overlay"></div>
@@ -75,30 +99,27 @@
     <!-- Why Choose Us -->
     <section class="why-choose-us">
       <div class="container">
-        <h2 class="section-title">Why Choose AIET?</h2>
+        <h2 class="section-title">Why Choose AIET - Best Computer Institute in Jajpur?</h2>
         <div class="cards-grid">
           <div class="card">
             <div class="card-icon">🤖</div>
-            <h3>Practical with AI & Automation</h3>
+            <h3>AI & Automation Focused</h3>
             <p>
-              Learn real-world skills with hands-on projects focused on AI and
-              automation technologies.
+              Learn real-world AI and automation skills with hands-on projects. Our AI courses in Jajpur prepare you for the future of technology.
             </p>
           </div>
           <div class="card">
             <div class="card-icon">💰</div>
-            <h3>Affordable Courses</h3>
+            <h3>Affordable Computer Courses</h3>
             <p>
-              Quality education starting from just ₹500. We believe in making
-              tech education accessible to everyone.
+              Quality education starting from just ₹500. We believe in making tech education accessible to everyone in rural Odisha.
             </p>
           </div>
           <div class="card">
             <div class="card-icon">🎯</div>
             <h3>Internship & Placement</h3>
             <p>
-              Get real experience through internships and placement
-              opportunities after course completion.
+              Get real experience through internships and placement opportunities after completing our computer courses in Jajpur.
             </p>
           </div>
         </div>
@@ -112,13 +133,12 @@
         <div class="testimonials-slider" id="testimonialsSlider">
           <div class="testimonial-card">
             <p class="testimonial-text">
-              "AIET helped me learn Python from scratch. The practical approach
-              and affordable fees made it perfect for me!"
+              "AIET helped me learn Python from scratch. The practical approach and affordable fees made it perfect for me!"
             </p>
             <div class="testimonial-profile">
               <img
                 src="/placeholder.svg?height=50&width=50"
-                alt="Raj Kumar"
+                alt="Raj Kumar - Python Student at AIET"
                 class="testimonial-avatar"
               />
               <div class="testimonial-author-info">
@@ -129,13 +149,12 @@
           </div>
           <div class="testimonial-card">
             <p class="testimonial-text">
-              "The instructors are very supportive and the curriculum is
-              up-to-date with industry standards."
+              "The instructors are very supportive and the curriculum is up-to-date with industry standards."
             </p>
             <div class="testimonial-profile">
               <img
                 src="/placeholder.svg?height=50&width=50"
-                alt="Priya Singh"
+                alt="Priya Singh - Web Development Student"
                 class="testimonial-avatar"
               />
               <div class="testimonial-author-info">
@@ -146,13 +165,12 @@
           </div>
           <div class="testimonial-card">
             <p class="testimonial-text">
-              "I got an internship opportunity right after completing the Web
-              Development course. Highly recommended!"
+              "I got an internship opportunity right after completing the Web Development course. Highly recommended!"
             </p>
             <div class="testimonial-profile">
               <img
                 src="/placeholder.svg?height=50&width=50"
-                alt="Amit Patel"
+                alt="Amit Patel - Web Development Intern"
                 class="testimonial-avatar"
               />
               <div class="testimonial-author-info">
@@ -163,13 +181,12 @@
           </div>
           <div class="testimonial-card">
             <p class="testimonial-text">
-              "The AI course was eye-opening! I learned concepts that are
-              directly applicable to real-world projects."
+              "The AI course was eye-opening! I learned concepts that are directly applicable to real-world projects."
             </p>
             <div class="testimonial-profile">
               <img
                 src="/placeholder.svg?height=50&width=50"
-                alt="Neha Sharma"
+                alt="Neha Sharma - AI Student"
                 class="testimonial-avatar"
               />
               <div class="testimonial-author-info">
@@ -180,13 +197,12 @@
           </div>
           <div class="testimonial-card">
             <p class="testimonial-text">
-              "Best investment for my career! The mentorship and support from
-              AIET team is exceptional."
+              "Best investment for my career! The mentorship and support from AIET team is exceptional."
             </p>
             <div class="testimonial-profile">
               <img
                 src="/placeholder.svg?height=50&width=50"
-                alt="Vikram Singh"
+                alt="Vikram Singh - Data Science Student"
                 class="testimonial-avatar"
               />
               <div class="testimonial-author-info">
@@ -203,7 +219,7 @@
     <section class="cta-section">
       <div class="container">
         <h2>Ready to Start Your Learning Journey?</h2>
-        <p>Join hundreds of students already learning with AIET</p>
+        <p>Join hundreds of students already learning computer skills with AIET in Jajpur</p>
         <a
           href="https://forms.gle/XRjdUKEzdmawcKXUA"
           class="btn btn-secondary"
@@ -216,15 +232,16 @@
     <!-- Courses Section -->
     <section class="courses-section" id="courses">
       <div class="container">
-        <h2 class="section-title">Our Courses</h2>
+        <!-- Updated section title with keyword-rich content -->
+        <h2 class="section-title">Computer Courses in Jajpur, Odisha</h2>
         <p class="section-subtitle">
-          Choose from our range of affordable, practical courses
+          Affordable PGDCA, Python, Web Development & Digital Marketing courses with government certification
         </p>
         <div class="courses-grid">
           <div class="course-card">
             <img
               src="/placeholder.svg?height=150&width=280"
-              alt="PGDCA Course"
+              alt="PGDCA Government Certificate Course - Computer Training in Jajpur"
               class="course-image"
             />
             <div class="course-content">
@@ -236,7 +253,8 @@
                 <p><strong>Duration:</strong> 6 months </p>
                 <p><strong>Level:</strong> Beginner</p>
               </div>
-              <p class="course-description">A simple course to understnd CS and get PGDCA Goverment Certificate .</p>
+              <!-- Updated description with PGDCA government certificate keyword -->
+              <p class="course-description">Get PGDCA government certificate with comprehensive computer training. Learn fundamentals of computer science, MS Office, and practical applications in Jajpur.</p>
               <a
                 href="https://forms.gle/XRjdUKEzdmawcKXUA"
                 class="btn btn-primary"
@@ -248,7 +266,7 @@
           <div class="course-card">
             <img
               src="/placeholder.svg?height=150&width=280"
-              alt="Web Development"
+              alt="Web Development Course - HTML, CSS, JavaScript Training in Jajpur"
               class="course-image"
             />
             <div class="course-content">
@@ -260,8 +278,9 @@
                 <p><strong>Duration:</strong> 3 months </p>
                 <p><strong>Level:</strong> Beginner</p>
               </div>
+              <!-- Updated description with web development course keyword -->
               <p class="course-description">
-                Learn HTML, CSS, and JavaScript to build responsive websites.
+                Learn web development course in Jajpur with HTML, CSS, and JavaScript. Build responsive websites and get hands-on project experience.
               </p>
               <a
                 href="https://forms.gle/XRjdUKEzdmawcKXUA"
@@ -275,7 +294,7 @@
           <div class="course-card">
             <img
               src="/placeholder.svg?height=150&width=280"
-              alt="MS Office with AI"
+              alt="MS Office with AI Course - Microsoft Office Training near Nandipur Chaka"
               class="course-image"
             />
             <div class="course-content">
@@ -287,9 +306,9 @@
                 <p><strong>Duration:</strong> 2 months</p>
                 <p><strong>Level:</strong> Beginner</p>
               </div>
+              <!-- Updated description with MS Office course near Nandipur Chaka keyword -->
               <p class="course-description">
-                Master Microsoft Office tools and leverage AI features for
-                productivity.
+                MS Office course near Nandipur Chaka with AI features. Master Word, Excel, PowerPoint and leverage AI for productivity.
               </p>
               <a
                 href="https://forms.gle/XRjdUKEzdmawcKXUA"
@@ -303,7 +322,7 @@
           <div class="course-card">
             <img
               src="/placeholder.svg?height=150&width=280"
-              alt="Python with AI"
+              alt="Python with AI Course - Python Programming Training in Jajpur Odisha"
               class="course-image"
             />
             <div class="course-content">
@@ -312,11 +331,12 @@
                 <span class="course-price">₹1499</span>
               </div>
               <div class="course-details">
-                <p><strong>Duration:</strong> 2months </p>
+                <p><strong>Duration:</strong> 2 months </p>
                 <p><strong>Level:</strong> For all </p>
               </div>
+              <!-- Updated description with python course in Jajpur Odisha keyword -->
               <p class="course-description">
-                Learn Simple Programing language with AI Application
+                Python course in Jajpur Odisha with AI applications. Learn simple programming language and AI fundamentals with practical projects.
               </p>
               <a
                 href="https://forms.gle/XRjdUKEzdmawcKXUA"
@@ -330,7 +350,7 @@
           <div class="course-card">
             <img
               src="/placeholder.svg?height=150&width=280"
-              alt="Java"
+              alt="Core Java Course - Java Programming Training in Jajpur"
               class="course-image"
             />
             <div class="course-content">
@@ -343,7 +363,7 @@
                 <p><strong>Level:</strong> Intermediate</p>
               </div>
               <p class="course-description">
-                A old and Industry Levele progaming .With Projects
+                Industry-level Java programming with projects. Learn object-oriented programming and build real-world applications.
               </p>
               <a
                 href="https://forms.gle/XRjdUKEzdmawcKXUA"
@@ -357,7 +377,7 @@
           <div class="course-card">
             <img
               src="/placeholder.svg?height=150&width=280"
-              alt="Digital Marketing Basics"
+              alt="Digital Marketing Course - SEO, Social Media Training in Jajpur"
               class="course-image"
             />
             <div class="course-content">
@@ -369,9 +389,9 @@
                 <p><strong>Duration:</strong> 6 months</p>
                 <p><strong>Level:</strong> Advance </p>
               </div>
+              <!-- Updated description with digital marketing course Jajpur keyword -->
               <p class="course-description">
-                Learn SEO, social media marketing, and content creation
-                strategies.
+                Digital marketing course in Jajpur. Learn SEO, social media marketing, and content creation strategies for online success.
               </p>
               <a
                 href="https://forms.gle/XRjdUKEzdmawcKXUA"
@@ -388,8 +408,8 @@
     <!-- Contact Section -->
     <section class="contact-section" id="contact">
       <div class="container">
-        <h2 class="section-title">Contact Us</h2>
-        <p class="section-subtitle">Get in touch with AIET Coaching Center</p>
+        <h2 class="section-title">Contact AIET Coaching Center in Jajpur</h2>
+        <p class="section-subtitle">Get in touch with the best computer institute in Jajpur, Odisha</p>
 
         <div class="contact-grid">
           <!-- Contact Info -->
@@ -417,7 +437,7 @@
             </div>
             <div class="info-item">
               <h3>📍 Location</h3>
-              <p>AIET Coaching Center<br />Nandipur Chaka ,Jajpur ,Odisha ,755006</p>
+              <p>AIET Coaching Center<br />Nandipur Chaka, Jajpur, Odisha 755006</p>
             </div>
           </div>
 
@@ -465,7 +485,7 @@
         <div class="footer-content">
           <div class="footer-section">
             <h4>AIET Coaching Center</h4>
-            <p>Bringing AI & Computer Education to Rural Students</p>
+            <p>Best Computer Institute in Jajpur, Odisha - Bringing AI & Computer Education to Rural Students</p>
             <div class="social-links">
               <a
                 href="https://youtube.com/@aietclasses"
@@ -509,13 +529,43 @@
             <h4>Contact Info</h4>
             <p>📧 biswalanil2004@gmail.com</p>
             <p>📞 +91 89173 32516</p>
+            <p>📍 Nandipur Chaka, Jajpur, Odisha</p>
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 AIET Coaching Center. All rights reserved.</p>
+          <p>&copy; 2025 AIET Coaching Center - Best Computer Institute in Jajpur, Odisha. All rights reserved.</p>
         </div>
       </div>
     </footer>
+
+    <!-- JSON-LD structured data for LocalBusiness and Course -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "AIET Coaching Center",
+      "image": "https://aiet-classes.vercel.app/logo.png",
+      "description": "AIET Coaching Center provides affordable PGDCA, Python, Web Development, and Digital Marketing courses for rural students in Jajpur, Odisha.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Nandipur Chaka",
+        "addressLocality": "Jajpur",
+        "addressRegion": "Odisha",
+        "postalCode": "755006",
+        "addressCountry": "IN"
+      },
+      "telephone": "+918917332516",
+      "email": "biswalanil2004@gmail.com",
+      "url": "https://aiet-classes.vercel.app",
+      "sameAs": [
+        "https://www.youtube.com/@aietclasses",
+        "https://www.instagram.com/aietclasses/",
+        "https://www.linkedin.com/in/aiet-classes/"
+      ],
+      "priceRange": "₹500 - ₹5999",
+      "areaServed": "Jajpur, Odisha, India"
+    }
+    </script>
 
     <script src="script.js"></script>
   </body>
