--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="hero-image-section">
             <div class="hero-image-container">
               <img
-                src="/placeholder.svg?height=400&width=400"
+                src="images\hero.png"height="400"width="400"
                 alt="AIET Coaching Center - Computer training and AI courses in Jajpur, Odisha"
                 class="hero-image"
               />
@@ -126,7 +126,7 @@
       </div>
     </section>
 
-    <!-- Testimonials -->
+    <!-- Testimonials
     <section class="testimonials">
       <div class="container">
         <h2 class="section-title">What Our Students Say</h2>
@@ -213,7 +213,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- CTA Section -->
     <section class="cta-section">
@@ -240,7 +240,7 @@
         <div class="courses-grid">
           <div class="course-card">
             <img
-              src="/placeholder.svg?height=150&width=280"
+              src="images\pgdca.jpg"height="150" width="280"
               alt="PGDCA Government Certificate Course - Computer Training in Jajpur"
               class="course-image"
             />
@@ -265,7 +265,7 @@
           </div>
           <div class="course-card">
             <img
-              src="/placeholder.svg?height=150&width=280"
+              src="images\webdev.png"height="150"width="280"
               alt="Web Development Course - HTML, CSS, JavaScript Training in Jajpur"
               class="course-image"
             />
@@ -293,7 +293,7 @@
 
           <div class="course-card">
             <img
-              src="/placeholder.svg?height=150&width=280"
+              src="images\msai.png"height="150"width="280"
               alt="MS Office with AI Course - Microsoft Office Training near Nandipur Chaka"
               class="course-image"
             />
@@ -321,7 +321,7 @@
 
           <div class="course-card">
             <img
-              src="/placeholder.svg?height=150&width=280"
+              src="images\python.png"height="150"width="280"
               alt="Python with AI Course - Python Programming Training in Jajpur Odisha"
               class="course-image"
             />
@@ -349,7 +349,7 @@
 
           <div class="course-card">
             <img
-              src="/placeholder.svg?height=150&width=280"
+              src="images\core-java.png"height="150"width="280"
               alt="Core Java Course - Java Programming Training in Jajpur"
               class="course-image"
             />
@@ -376,7 +376,7 @@
 
           <div class="course-card">
             <img
-              src="/placeholder.svg?height=150&width=280"
+              src="images\digital-marketing.png"height="150"width="280"
               alt="Digital Marketing Course - SEO, Social Media Training in Jajpur"
               class="course-image"
             />
