--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
             <div class="info-item">
               <h3>📧 Email</h3>
               <p>
-                <a href="mailto:biswalanil2004@gmail.com"
-                  >biswalanil2004@gmail.com</a
+                <a href="mailto:aietclasses@gmail.com"
+                  >aietclasses@gmail.com</a
                 >
               </p>
             </div>
@@ -600,7 +600,7 @@
           </div>
           <div class="footer-section">
             <h4>Contact Info</h4>
-            <p>📧 biswalanil2004@gmail.com</p>
+            <p>📧 aietclasses@gmail.com</p>
             <p>📞 +91 89173 32516</p>
             <p>📍 Nandipur Chaka, Jajpur, Odisha</p>
           </div>
@@ -631,7 +631,7 @@
           "addressCountry": "IN"
         },
         "telephone": "+918917332516",
-        "email": "biswalanil2004@gmail.com",
+        "email": "aietclasses@gmail.com",
         "url": "https://aiet-classes.vercel.app",
         "sameAs": [
           "https://www.youtube.com/@aietclasses",
