--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p>📧 biswalanil2004@gmail.com</p>
+                    <p>📧 aietclasses@gmail.com</p>
                     <p>📞 +91 89173 32516</p>
                     <p>📍 Nandipur Chaka, Jajpur, Odisha</p>
                 </div>
